--- a/package.json
+++ b/package.json
@@ -44,8 +44,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "child_process": "^1.0.2",
     "electron-squirrel-startup": "^1.0.1",
+    "fs": "^0.0.1-security",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "simple-git": "^3.27.0"
   }
 }
