--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "child_process": "^1.0.2",
     "electron-squirrel-startup": "^1.0.1",
     "fs": "^0.0.1-security",
+    "isomorphic-git": "^1.27.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "simple-git": "^3.27.0"
+    "react-dom": "^18.3.1"
   }
 }
