--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "license": "MIT",
   "dependencies": {
     "child_process": "^1.0.2",
+    "dotenv": "^16.4.5",
     "electron-squirrel-startup": "^1.0.1",
     "fs": "^0.0.1-security",
     "isomorphic-git": "^1.27.1",
