--- a/package.json
+++ b/package.json
@@ -44,10 +44,11 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@fontsource/inter": "^5.1.0",
     "@mui/joy": "^5.0.0-beta.48",
+    "@mui/material": "^6.1.8",
     "child_process": "^1.0.2",
     "dotenv": "^16.4.5",
     "electron-squirrel-startup": "^1.0.1",
